--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "boxicons": "^2.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "webpack-dev-middleware": ">=6.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.0",
@@ -46,6 +47,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "webpack-dev-middleware": ">=6.1.2"
   }
 }
